1.9.0:
    -Added icon rendering for Blocks and Items. Disabled by default
    -Changed the way how TooltipComponents are working to enhance the performance
    -Reactivated the IC2 integration
    -Fixed a bug with some Items doesn't have the same metadata then the block Closes #7

1.8.0-RC3:
    -Fixed Pam's HarvestCraft integration outside my development environment
    -Storage Drawers integration
    -French translation by Xandoria

1.8.0-RC2:
    -Block or item description is now smaller than the other text
    -Gradle file can now download a file directly -> used for Pam's HarvestCraft
    -Added Pam's HarvestCraft integration
    -TUMAT is now fully localised, go and add some languages


    -API:
        -Added IComponentRender#getHeightPerLine(FontRenderer)

1.8.0-RC1:
    -Fixed an <ERROR> with RFTools Powercells
    -ForgeUnits are now the preferred Energy Unit
    -Added the maven and jenkins stuff to the build.gradle
    -Disabled IC2, TCon, Tesla integration
    -Removed DeepResonance integration
    -Added a y offset if a boss bar gets rendered
    -TUMAT now tries more to find a valid name for a block
    -Cable are now showing their max transfer rate

1.7.1:
    -Fix for a server startup crash

1.7.0:
    -Removed RF compatibility, cause nobody uses it anymore
    -Renamed ForgeUnits to Energy, cause every mod give it another name
    -Fixed name for special ItemBlocks like doors, crops, ...
    -Fixed inventory free slots tooltip
    -Fixed typo inside of the conifg -> show inventory states have to be enabled again
    -Activated ForgeUnits integration, cause I forgot to
    -Fixed broken Actually Additions integration

    -License change to LPGLv3


    -API:
        -Added java docs for all the api stuff
        -Removed method remap from IWorldRenderer
        -Added getEnergyColor() for mods that are supporting ForgeUnits
        -Added a init method to IWorldRenderer

1.7.0-BETA-2:
    -Actually fixed ItemStack null checks

1.7.0-BETA: