@@ -2,7 +2,7 @@ package de.canitzp.tumat.integration;
 
 import de.canitzp.tumat.api.IWorldRenderer;
 import de.canitzp.tumat.api.TooltipComponent;
-import de.canitzp.tumat.api.components.ColoredText;
+import de.canitzp.tumat.api.components.TextComponent;
 import de.canitzp.tumat.configuration.cats.ConfigBoolean;
 import de.canitzp.tumat.local.L10n;
 import net.minecraft.client.entity.EntityPlayerSP;
@@ -29,14 +29,14 @@ public class CommonCapabilities implements IWorldRenderer{
             ITemperature temp = tile.getCapability(TemperatureConfig.CAPABILITY, side);
             if(temp != null){
                 float max = Math.round(temp.getMaximumTemperature() * 10F) / 10F;
-                ColoredText.createOneLine(component, L10n.getCommonCapsTemp(String.valueOf((Math.round(temp.getTemperature() * 10F) / 10F)), max > 10000 ? "<10000" : String.valueOf(max)), ColoredText.Colors.ORANGE_BRIGHT);
+                component.add(new TextComponent(L10n.getCommonCapsTemp(String.valueOf((Math.round(temp.getTemperature() * 10F) / 10F)), max > 10000 ? "<10000" : String.valueOf(max))).setColor(0x00EA723F), TooltipComponent.Priority.HIGH);
             }
         }
         //Worker
         if(ConfigBoolean.SHOW_WORK_COMMONCAPABILITIES.value && tile.hasCapability(WorkerConfig.CAPABILITY, side)){
             IWorker worker = tile.getCapability(WorkerConfig.CAPABILITY, side);
             if(worker != null){
-                ColoredText.createOneLine(component, worker.canWork() && worker.hasWork() ? L10n.COMMONCAPS_WORK_ON : L10n.COMMONCAPS_WORK_OFF, ColoredText.Colors.BROWN_BRIGHT);
+                component.add(new TextComponent(worker.canWork() && worker.hasWork() ? L10n.COMMONCAPS_WORK_ON : L10n.COMMONCAPS_WORK_OFF).setColor(0x00965A40), TooltipComponent.Priority.HIGH);
             }
         }
         return component;
