@@ -3,7 +3,7 @@ package de.canitzp.tumat.integration;
 import com.pam.harvestcraft.blocks.growables.PamCropGrowable;
 import de.canitzp.tumat.api.IWorldRenderer;
 import de.canitzp.tumat.api.TooltipComponent;
-import de.canitzp.tumat.api.components.ColoredText;
+import de.canitzp.tumat.api.components.TextComponent;
 import de.canitzp.tumat.configuration.cats.ConfigBoolean;
 import de.canitzp.tumat.local.L10n;
 import net.minecraft.block.BlockCrops;
@@ -25,7 +25,7 @@ public class PamsHarvestCraft implements IWorldRenderer {
         if(ConfigBoolean.SHOW_PLANT_GROWTH_STATUS.value && state.getBlock() instanceof PamCropGrowable && !(state.getBlock() instanceof BlockCrops)){
             PropertyInteger stage = ((PamCropGrowable) state.getBlock()).getAgeProperty();
             float growStatus = Math.round(((state.getValue(stage) * 1.0F / ((PamCropGrowable) state.getBlock()).getMatureAge() * 1.0F) * 100F) * 100.00F) / 100.00F;
-            ColoredText.createOneLine(component, L10n.getVanillaGrowRate(String.valueOf(growStatus)), ColoredText.Colors.BROWN_PLANT);
+            component.add(new TextComponent(L10n.getVanillaGrowRate(String.valueOf(growStatus))).setColor(0x00A97D15), TooltipComponent.Priority.HIGH);
         }
         return component;
     }
